fix: correct form action URL in ex3.html

--- a/TP2/ex3.html
+++ b/TP2/ex3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="https://www.cafe-it.fr/cytech/post.php" method="post">
+<form action="https://www.cafe-it.fr/cytech/post.php&" method="post">
   <fieldset>
     <legend>Formulaire</legend>
 
