feat(TP3): add CSS exercises with selectors and styling examples
Add multiple HTML and CSS files for TP3 exercises demonstrating:
- CSS selectors and specificity (ex1)
- CSS selector analysis (ex2)
- Custom ordered lists with counters (ex3)
- Table styling with advanced selectors (ex4)
- Update index.html to include all TP3 exercises

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <main class="flex-grow max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 w-full">
 
     <div class="mb-8">
-        <h2 class="text-2xl font-bold text-gray-900">Vos Travaux Pratiques</h2>
+        <h2 class="text-2xl font-bold text-gray-900">Travaux Pratiques</h2>
         <p class="text-gray-600 mt-1">Sélectionnez un module pour accéder aux exercices.</p>
     </div>
 
@@ -70,7 +70,7 @@
     </div>
 </footer>
 
-<!-- JavaScript Logic -->
+<!-- JavaScript -->
 <script>
     // Configuration des données des TP
     // NOTE: Si vous ajoutez des fichiers, mettez simplement à jour cette liste.
@@ -112,6 +112,12 @@
             exercises: [
                 { name: "Exercice 1 : Sélecteurs", file: "TP3/ex1.html" },
                 { name: "Exercice 2 : Mise en page", file: "TP3/ex2.html" },
+                { name: "Exercice 3 : Listes & Puces", file: "TP3/ex3.html" },
+                { name: "Exercice 4 : Tableaux", file: "TP3/ex4.html" },
+                { name: "Exercice 5 : Onglet", file: "TP3/ex5.html" },
+                { name: "Exercice 6 : Formulaire", file: "TP3/ex6.html" },
+                { name: "Exercice 7 : Tableaux", file: "TP3/ex7.html" },
+                { name: "Exercice 8 : Formulaire", file: "TP3/ex8.html" },
                 { name: "TP20 CSS (PDF)", file: "TP3/TP20_CSS.pdf", type: "pdf" }
             ]
         },
